Style + sidebar + localize

--- a/package.json
+++ b/package.json
@@ -5,9 +5,21 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "babel-eslint": "^10.0.3",
+    "bulma": "^0.8.0",
+    "bulma-extensions": "^6.2.7",
     "dotenv": "^8.2.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-app": "^6.2.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
@@ -16,14 +28,19 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-strapi": "^0.0.10",
     "gatsby-transformer-sharp": "^2.3.13",
+    "i18next": "^19.1.0",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-i18next": "^11.3.1",
     "react-markdown": "^4.3.1",
-    "react-moment": "^0.9.7"
+    "react-moment": "^0.9.7",
+    "react-share": "^4.0.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
