--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
     "bulma": "^0.8.0",
     "bulma-extensions": "^6.2.7",
