--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "i18next": "^19.1.0",
     "i18next-browser-languagedetector": "^4.0.1",
-    "i18next-xhr-backend": "^3.2.2",
+    "i18next-node-fs-backend": "^2.1.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
