--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
   "plugins": ["react", "react-hooks"],
   "rules": {
     "newline-after-var": 1,
+    "operator-linebreak": 0,
     "implicit-arrow-linebreak": 0,
     "object-curly-newline": 0,
     "no-confusing-arrow": 0,
@@ -37,6 +38,7 @@
     "jsx-a11y/anchor-is-valid": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/interactive-supports-focus": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
     "react/jsx-curly-newline": 0,
     "react/jsx-props-no-spreading": 0,
     "react/button-has-type": 0,
